-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
Ubuntu 12.04/x64, Qt 5
Windows 7
-
187b61d879129f79da5dbc57805600d5159b1740
1. Open Qt Creator
2. Go to help mode
3. Choose "Open Advanced Find" from the menu or press Ctrl+Shift+F
Result: Segfault.
Note: This happens only when Creator was compiled with Qt 5!
- is required for
-
QTBUG-27319 Qt 5.0 Beta 2 tasks
-
- Closed
-
For Gerrit Dashboard: QTBUG-27414 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
36619,1 | Don't try to emit focusObjectChanged if window pointer is zero | master | qt/qtbase | Status: MERGED | +2 | 0 |